<resources>
    <string name="app_name">My School App</string>
    <string name="activity_settings">Settings</string>
    <string name="btnNorthThurston">North Thurston High School</string>
    <string name="btnCapitalHigh">Capital High School</string>
    <string name="btnOlympiaHigh">Olympia High School</string>
    <string name="txtOlympiaHighAddress">1302 North Street SE, Olympia, WA 98501</string>
    <string name="txtCapitalHighAddress">2707 Conger Ave NW, Olympia, WA 98502</string>
    <string name="txtNorthThurstonHighAddress">600 Sleater Kinney Rd NE, Olympia, WA 98506</string>
    <string name="txtInfo_NorthThurstonHigh">North Thurston High School, located in the North Thurston Public Schools District in Lacey, Washington, is a comprehensive high school which opened in 1955.</string>
    <string name="txtInfo_CapitalHigh">Capital High School, commonly referred to as Capital, is a public high school in Olympia, Washington, United States. It is one of two comprehensive high schools in the Olympia School District.</string>
    <string name="txtInfo_OlympiaHigh">Olympia High School, commonly referred to as Oly, is a public high school in the southeast part of Olympia, Washington along the city\'s border with Tumwater.</string>
    <string name="description_OlympiaHigh">OlympiaHigh Image</string>
    <string name="description_CapitalHigh">Capital High Image</string>
    <string name="description_NorthThurston">North Thurston High Image</string>
    <string name="logo_1">Capital High Logo</string>
    <string name="logo_2">Olympia high Logo</string>
    <string name="logo_3">North Thurston High Logo</string>
    <string name="activity_school_title1">Olympia High School</string>
    <string name="activity_school_title2">Capital High School</string>
    <string name="activity_school_title3">North Thurston High School</string>
    <string name="Activity_address_title">Address</string>
</resources>