<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnOlympiaHigh"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:text="@string/btnOlympiaHigh"
        app:backgroundTint="#03A9F4" />

    <ImageView
        android:id="@+id/OlympiaHighImg"
        android:layout_width="208dp"
        android:layout_height="112dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="99dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/description_OlympiaHigh"
        app:srcCompat="@drawable/olympia_high" />

    <ImageView
        android:id="@+id/CapitalHighImg"
        android:layout_width="220dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="209dp"
        android:contentDescription="@string/description_CapitalHigh"
        app:srcCompat="@drawable/capital_high" />

    <Button
        android:id="@+id/btnCapitalHigh"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="231dp"
        android:text="@string/btnCapitalHigh"
        app:backgroundTint="#F35050" />

    <ImageView
        android:id="@+id/NorthThurstonHighImg"
        android:layout_width="187dp"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginTop="415dp"
        android:contentDescription="@string/description_NorthThurston"
        app:srcCompat="@drawable/norththurston_high" />

    <Button
        android:id="@+id/btnNorthThurstonHigh"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:text="@string/btnNorthThurston" />

</RelativeLayout>