<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NorthThurstonHighLogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NorthThurstonHigh">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/logo_3"
        app:srcCompat="@drawable/norththurston_high_logo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="319dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="181dp"
        android:text="@string/activity_school_title3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="315dp"
        android:layout_height="184dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="46dp"
        android:text="@string/txtInfo_NorthThurstonHigh"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="98dp"
        android:text="@string/Activity_address_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:text="@string/txtNorthThurstonHighAddress" />
</RelativeLayout>