<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OlympiaHigh">

    <ImageView
        android:id="@+id/OlympiaHighLogo"
        android:layout_width="270dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:contentDescription="@string/logo_2"
        app:srcCompat="@drawable/olympia_high_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="266dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:text="@string/activity_school_title1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="0dp"
        android:text="@string/txtInfo_OlympiaHigh"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="103dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="82dp"
        android:text="@string/Activity_address_title"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="61dp"
        android:text="@string/txtOlympiaHighAddress" />
</RelativeLayout>